redis-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
  - name: redis-cli
    image: redis:6.2.7
    ports:
      - containerPort: 6379
