load-balancer-dev-api.yml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-dev-api
spec:
  selector:
    gemfire.vmware.com/app: NAME-server
  ports:
    - name: rest-api
      port: 7070
      targetPort: 7070
  type: LoadBalancer
