load-balancer-mgmt.yml
apiVersion: v1
kind: Service
metadata:
  name: LB-SVC-MGMT-API
spec:
  selector:
    gemfire.vmware.com/app: NAME-locator
  ports:
    - name: management
      port: 7070
      targetPort: 7070
  sessionAffinity: ClientIP
  sessionAffinityConfig:
      clientIP:
        timeoutSeconds: 10800
  type: LoadBalancer
