ingress-gateway.yml
#@ load("@ytt:data", "data")

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: gemfire-contour-gateway-class
spec:
  controllerName: projectcontour.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: #@ data.values.gateway_name
spec:
  gatewayClassName: #@ data.values.gateway_class_name
  listeners:
  - name: gemfire-gateway-listener
    protocol: TLS
    port: 9000
    tls:
      mode: Passthrough
